updating the side mobile users

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   </head>
   <body>
     <nav>
+      <div class="mobile-menu-icon">
+        <i style="20px" class="fa-solid fa-bars" style="color: #bdbdbd;"></i>
+      </div>
       <div class="nav-links">
         <div>
           <a href="#">myTunes</a>
@@ -97,7 +100,7 @@
 
         <div style="margin-top: 10px">
           <img
-            src="https://thomasmartin86.github.io/mytuneslanding/img/mockup2.png"
+            src="./images/Picsart_23-10-27_01-12-02-766.png" height="800px"
             alt=""
           />
         </div>
@@ -210,9 +213,6 @@
         </div>
     </div>
 </div>
-<div class="mobile">
-<img src="./images/oops.png" height="20px" alt="oops">
-<p>Mobile version is not available!</p>
-<img src="./images/1200x630wp.png" alt="">
+
   </body>
 </html>
